--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <div id="app"></div>
+  <!-- link Jquery  -->
   <script type="module" src="/src/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </body>
 
 </html>
