--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="../../public/logocd_gray.png" />
+  <link rel="icon" type="image/svg+xml" href="./public/logocd_gray.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Damiano Casolari - Web Developer | Creazione Siti Web Professionali</title>
 </head>
