add description for indexing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./public/shadowLogos.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Damiano Casolari - Web Developer | Creazione Siti Web Professionali</title>
+  <title>Damiano Casolari - Web Developer | Creazione Siti Web Professionali | Modena</title>
+  <meta name="description"
+    content="Sono un web developer residente a Vignola - Modena, appassionato di siti ed applicazioni web, costantemente aggiornato sulle nuove tecnologie e design innovativi focalizzato sull'esperienza utente, sicurezza dei dati e funzionalità avanzate" />
 </head>
 
 <body>
