--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <meta name="description"
     content="Sono un web developer residente a Vignola - Modena, appassionato di siti ed applicazioni web, costantemente aggiornato sulle nuove tecnologie e design innovativi focalizzato sull'esperienza utente, sicurezza dei dati e funzionalità avanzate" />
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CDZPGX7L7Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-CDZPGX7L7Z');
+</script>
 
 <body>
   <div id="app"></div>
