Fix email + add policy privacy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Damiano Casolari - Web Developer | Creazione Siti Web Professionali | Modena</title>
   <meta name="description"
-    content="Sono un web developer residente a Vignola - Modena, appassionato di siti ed applicazioni web, costantemente aggiornato sulle nuove tecnologie e design innovativi focalizzato sull'esperienza utente, sicurezza dei dati e funzionalità avanzate" />
+    content="Sviluppatore web a Cervia, specializzato nella realizzazione di siti internet moderni e applicazioni web su misura. Progetto soluzioni veloci, sicure e ottimizzate per la user experience, con attenzione al design, alle prestazioni e alla visibilità online. Sempre aggiornato sulle nuove tecnologie per aiutare aziende e professionisti a crescere sul web." />
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDZPGX7L7Z"></script>
