trasformato in SPA senza BE tranne fromspree - servizio online per email

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Damiano Casolari - Web Developer | Creazione Siti Web Professionali | Modena</title>
   <meta name="description"
     content="Sviluppatore web a Cervia, specializzato nella realizzazione di siti internet moderni e applicazioni web su misura. Progetto soluzioni veloci, sicure e ottimizzate per la user experience, con attenzione al design, alle prestazioni e alla visibilità online. Sempre aggiornato sulle nuove tecnologie per aiutare aziende e professionisti a crescere sul web." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;500;800&family=Comforter&family=Fasthand&family=Poppins:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CDZPGX7L7Z"></script>
